# autohtd

./: .coverage  .gitignore  Jenkinsfile  README.md  pyproject.toml
dashboard-app/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
dashboard-app/public/: index.html
dashboard-app/src/: App.css  App.js  index.js
dashboard-app/src/components/: Movie.js  Tv.js
downloader-app/: Dockerfile  docker-compose.yml  requirements.txt
downloader-app/src/: movie-download-app.py  tv-download-app.py
libs/episodate/: pyproject.toml
libs/episodate/episodate/: __init__.py  api.py  episodate_library.py
libs/episodate/tests/: test_episodate_api.py
libs/episodate_library/: episodate_library.py
libs/qbittorrent_library/: qbittorrent_library.py
libs/torrent_library/: torrent_library.py
libs/yts_library/: yts_library.py
server-app/: Dockerfile  docker-compose.yml  requirements.txt
server-app/src/: server-app.py
tests/: test_episodate_library.py
