[tool.poetry]
name = "autohtd"
version = "0.1.0"
description = ""
authors = ["Steve Korber <korbersa@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
black = "^23.1.0"
pytest-xdist = "^3.2.1"
episodate = { path = "./libs/episodate", develop = false }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration"
]