[tool.poetry]
name = "api"
version = "0.1.0"
description = "Uses the Episodate API to check TV Show releases."
authors = ["Steve Korber <korbersa@outlook.com>"]
readme = ""

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
